Hopefully finally solved issue with carousel controls on mobile.

--- a/css/dance.css
+++ b/css/dance.css
@@ -290,14 +290,9 @@ nav.detached {
   right: 20%;
 }
 
-.carousel-control:focus {
+.carousel-control:focus, .carousel-control:hover {
 	opacity: 0.5;
 	filter: alpha(opacity=50);
-}
-
-.carousel-control:hover {
-	opacity: 0.9;
-	filter: alpha(opacity=90);
 }
 
 /* MOTTO CONTENT
@@ -619,6 +614,11 @@ nav.detached {
 		margin-bottom: 20px;
 		font-size: 18px;
 		line-height: 1.4;
+	}
+	
+	.carousel-control:hover {
+	  opacity: 0.9;
+	  filter: alpha(opacity=90);
 	}
 
 }
